WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118998
Plug-in unavailability indicator should not be displayed if a blocked plugin's indicator is clipped
https://bugs.webkit.org/show_bug.cgi?id=118998
Summary
Plug-in unavailability indicator should not be displayed if a blocked plugin'...
Tim Horton
Reported
2013-07-22 17:50:16 PDT
We don't want to display the indicator if it's clipped and the indicator is for a blocked plug-in, because clients can do their own thing in that case (via DidBlockInsecurePluginVersion). <
rdar://problem/14511268
>
Attachments
patch
(12.62 KB, patch)
2013-07-22 17:58 PDT
,
Tim Horton
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2013-07-22 17:58:45 PDT
Created
attachment 207300
[details]
patch
WebKit Commit Bot
Comment 2
2013-07-22 18:00:15 PDT
Attachment 207300
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/WebCore.exp.in', u'Source/WebCore/html/HTMLEmbedElement.cpp', u'Source/WebCore/html/HTMLObjectElement.cpp', u'Source/WebCore/html/HTMLPlugInElement.cpp', u'Source/WebCore/html/HTMLPlugInImageElement.cpp', u'Source/WebCore/loader/SubframeLoader.cpp', u'Source/WebCore/page/FrameView.cpp', u'Source/WebCore/rendering/RenderEmbeddedObject.cpp', u'Source/WebCore/rendering/RenderEmbeddedObject.h', u'Source/WebKit2/WebProcess/WebPage/WebPage.cpp']" exit_code: 1 Source/WebCore/rendering/RenderEmbeddedObject.h:52: The parameter name "hidden" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3
2013-07-22 18:40:27 PDT
http://trac.webkit.org/changeset/153017
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug